doc/experiments/experiment2/outLog.txt
HelloWorld.java:9: error: not a statement
oops
^
HelloWorld.java:9: error: ';' expected
oops
    ^
2 errors
